--- a/layouts/partials/bio.html
+++ b/layouts/partials/bio.html
@@ -1,5 +1,5 @@
 <div class="bio mb-4">
   <img src="{{ .Site.Author.avatar }}" />
-  <p>I'm <strong>{{ .Site.Author.name }}</strong>, a Finnish web developer, creator and blogger. I've been building websites and software for a living since 2001.</p>
-  <p>When I'm not on the road <a href="{{ .Site.BaseURL }}travel-photography/">exploring places near and far</a>, this is where you'll find me publishing thoughts on web creatorship, social media, travels and the beautiful art of personal blogging. Thank you for dropping by!</p>
+  <p>I'm <strong>{{ .Site.Author.name }}</strong>, a Finnish web developer, designer and blogger. I've been building websites and software for a living since 2001.</p>
+  <p>When I'm not on the road <a href="{{ .Site.BaseURL }}travel-photography/">exploring places near and far</a>, this is where you'll find me publishing thoughts on web life, social media, travels and the lovely craft of personal blogging. Thank you for dropping by!</p>
 </div>
